parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    FOR_K
    TO_K

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON VARS MODULES START
Rule 2     neural_program_id -> EMPTY
Rule 3     VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND
Rule 4     VAR -> ID
Rule 5     VARS_DECL -> TYPE VAR neural_var_dec SEMICOLON RVARS_DECL
Rule 6     VARS_DECL -> ARRAY_K TYPE VAR neural_array_dec LBRACE CONSTANT neural_constant neural_array_size RBRACE SEMICOLON RVARS_DECL
Rule 7     neural_var_dec -> EMPTY
Rule 8     neural_array_dec -> EMPTY
Rule 9     neural_array_size -> EMPTY
Rule 10    RVARS_DECL -> VARS_DECL
Rule 11    RVARS_DECL -> EMPTY
Rule 12    TYPE -> INT_K
Rule 13    TYPE -> FLOAT_K
Rule 14    TYPE -> STRING_K
Rule 15    CONSTANT -> INT
Rule 16    CONSTANT -> FLOAT
Rule 17    CONSTANT -> STRING
Rule 18    MODULES -> MODULES_RETURN
Rule 19    MODULES -> MODULES_VOID
Rule 20    MODULES -> EMPTY
Rule 21    MODULES_RETURN -> FUNCTION_K TYPE ID neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
Rule 22    MODULES_VOID -> FUNCTION_K VOID_K ID neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
Rule 23    neural_modules -> EMPTY
Rule 24    neural_modules_size -> EMPTY
Rule 25    neural_endfunc -> EMPTY
Rule 26    PARAMETERS -> TYPE VAR neural_parameters RPARAMETERS
Rule 27    PARAMETERS -> EMPTY
Rule 28    RPARAMETERS -> COMMA PARAMETERS
Rule 29    RPARAMETERS -> EMPTY
Rule 30    neural_parameters -> EMPTY
Rule 31    FUNCTION_CALL -> ID neural_fc_era LPAREN EXPRESSION_LIST neural_fc_gosub RPAREN
Rule 32    neural_fc_era -> EMPTY
Rule 33    neural_fc_gosub -> EMPTY
Rule 34    START -> MAIN_K neural_main LPAREN RPAREN BLOCKSTART BODY BLOCKEND
Rule 35    neural_main -> EMPTY
Rule 36    BODY -> STATEMENT RBODY
Rule 37    BODY -> EMPTY
Rule 38    RBODY -> BODY
Rule 39    STATEMENT -> ASSIGN SEMICOLON
Rule 40    STATEMENT -> RETURN
Rule 41    STATEMENT -> READ SEMICOLON
Rule 42    STATEMENT -> WRITE SEMICOLON
Rule 43    STATEMENT -> IFELSE
Rule 44    STATEMENT -> WHILE_STMT
Rule 45    STATEMENT -> DO_WHILE
Rule 46    STATEMENT -> FUNCTION_CALL SEMICOLON
Rule 47    STATEMENT -> GRAPH SEMICOLON
Rule 48    RSTATEMENT -> STATEMENT RSTATEMENT
Rule 49    RSTATEMENT -> EMPTY
Rule 50    WRITE -> WRITE_K LPAREN WRITE_LIST RPAREN
Rule 51    WRITE_LIST -> R_ASSIGN RWRITE
Rule 52    WRITE_LIST -> CONSTANT neural_constant RWRITE
Rule 53    RWRITE -> neural_write COMMA WRITE_LIST
Rule 54    RWRITE -> neural_write EMPTY
Rule 55    GRAPH -> GRAPH_K LPAREN VAR neural_check_array COMMA VAR neural_check_array RPAREN neural_graph_quad
Rule 56    neural_check_array -> EMPTY
Rule 57    neural_graph_quad -> EMPTY
Rule 58    MEAN -> MEAN_K LPAREN VAR neural_check_array RPAREN neural_mean_quad
Rule 59    neural_mean_quad -> EMPTY
Rule 60    MEDIAN -> MEDIAN_K LPAREN VAR neural_check_array RPAREN neural_median_quad
Rule 61    neural_median_quad -> EMPTY
Rule 62    MODE -> MODE_K LPAREN VAR neural_check_array RPAREN neural_mode_quad
Rule 63    neural_mode_quad -> EMPTY
Rule 64    neural_write -> EMPTY
Rule 65    READ -> READ_K LPAREN ID_LIST RPAREN
Rule 66    ID_LIST -> ID neural_read RID_LIST
Rule 67    neural_read -> EMPTY
Rule 68    RID_LIST -> COMMA ID_LIST
Rule 69    RID_LIST -> EMPTY
Rule 70    ASSIGN -> ARRAY EQUALS neural_equals R_ASSIGN neural_assign_quad
Rule 71    ASSIGN -> VAR neural_assign EQUALS neural_equals R_ASSIGN neural_assign_quad
Rule 72    R_ASSIGN -> EXPRESSION
Rule 73    R_ASSIGN -> FUNCTION_CALL
Rule 74    R_ASSIGN -> ARRAY
Rule 75    R_ASSIGN -> MEAN
Rule 76    R_ASSIGN -> MEDIAN
Rule 77    R_ASSIGN -> MODE
Rule 78    ARRAY -> VAR neural_assign LBRACE neural_array_pop EXPRESSION neural_array_ver RBRACE
Rule 79    neural_array_pop -> EMPTY
Rule 80    neural_array_ver -> EMPTY
Rule 81    neural_assign -> EMPTY
Rule 82    neural_equals -> EMPTY
Rule 83    neural_assign_quad -> EMPTY
Rule 84    RETURN -> RETURN_K LPAREN EXPRESSION RPAREN SEMICOLON
Rule 85    IFELSE -> IF_K LPAREN H_EXPRESSION RPAREN neural_ifelse BLOCKSTART RSTATEMENT BLOCKEND NELSE neural_ifelse_end
Rule 86    neural_ifelse -> EMPTY
Rule 87    neural_ifelse_end -> EMPTY
Rule 88    NELSE -> ELSE
Rule 89    NELSE -> EMPTY
Rule 90    ELSE -> neural_else ELSE_K BLOCKSTART RSTATEMENT BLOCKEND
Rule 91    neural_else -> EMPTY
Rule 92    WHILE_STMT -> WHILE_K neural_while_push LPAREN H_EXPRESSION RPAREN neural_while BLOCKSTART RSTATEMENT BLOCKEND neural_while_end
Rule 93    neural_while_push -> EMPTY
Rule 94    neural_while -> EMPTY
Rule 95    neural_while_end -> EMPTY
Rule 96    DO_WHILE -> DO_K neural_do_while BLOCKSTART RSTATEMENT BLOCKEND WHILE_K LPAREN H_EXPRESSION RPAREN neural_do_while_end SEMICOLON
Rule 97    neural_do_while -> EMPTY
Rule 98    neural_do_while_end -> EMPTY
Rule 99    EXPRESSION_LIST -> H_EXPRESSION neural_param_exp REXPRESSION_LIST
Rule 100   REXPRESSION_LIST -> COMMA EXPRESSION_LIST
Rule 101   REXPRESSION_LIST -> EMPTY
Rule 102   neural_param_exp -> EMPTY
Rule 103   H_EXPRESSION -> S_EXPRESSION H_REXPRESSION
Rule 104   H_REXPRESSION -> OR neural_op H_EXPRESSION neural_hexpression
Rule 105   H_REXPRESSION -> AND neural_op H_EXPRESSION
Rule 106   H_REXPRESSION -> EMPTY
Rule 107   neural_hexpression -> EMPTY
Rule 108   S_EXPRESSION -> EXPRESSION S_REXPRESSION
Rule 109   S_REXPRESSION -> GT neural_op S_EXPRESSION neural_sexpression
Rule 110   S_REXPRESSION -> GTE neural_op S_EXPRESSION neural_sexpression
Rule 111   S_REXPRESSION -> LT neural_op S_EXPRESSION neural_sexpression
Rule 112   S_REXPRESSION -> LTE neural_op S_EXPRESSION neural_sexpression
Rule 113   S_REXPRESSION -> DOUBLEEQUAL neural_op S_EXPRESSION neural_sexpression
Rule 114   S_REXPRESSION -> NEQUAL neural_op S_EXPRESSION neural_sexpression
Rule 115   S_REXPRESSION -> EMPTY
Rule 116   neural_sexpression -> EMPTY
Rule 117   EXPRESSION -> TERM neural_expression REXPRESSION
Rule 118   neural_expression -> EMPTY
Rule 119   REXPRESSION -> PLUS neural_op EXPRESSION
Rule 120   REXPRESSION -> MINUS neural_op EXPRESSION
Rule 121   REXPRESSION -> EMPTY
Rule 122   neural_op -> EMPTY
Rule 123   TERM -> FACTOR neural_term RTERM
Rule 124   neural_term -> EMPTY
Rule 125   RTERM -> TIMES neural_op TERM
Rule 126   RTERM -> DIVIDE neural_op TERM
Rule 127   RTERM -> EMPTY
Rule 128   FACTOR -> ID neural_factor_id
Rule 129   FACTOR -> CONSTANT neural_constant
Rule 130   FACTOR -> LPAREN H_EXPRESSION RPAREN
Rule 131   neural_constant -> EMPTY
Rule 132   neural_factor_id -> EMPTY
Rule 133   EMPTY -> <empty>

Terminals, with rules where they appear

AND                  : 105
ARRAY_K              : 6
BLOCKEND             : 3 21 22 34 85 90 92 96
BLOCKSTART           : 3 21 22 34 85 90 92 96
COLON                : 
COMMA                : 28 53 55 68 100
COMMENT              : 
DIVIDE               : 126
DOUBLEEQUAL          : 113
DO_K                 : 96
ELSE_K               : 90
EQUALS               : 70 71
FLOAT                : 16
FLOAT_K              : 13
FOR_K                : 
FUNCTION_K           : 21 22
GRAPH_K              : 55
GT                   : 109
GTE                  : 110
ID                   : 1 4 21 22 31 66 128
IF_K                 : 85
INT                  : 15
INT_K                : 12
LBRACE               : 6 78
LPAREN               : 21 22 31 34 50 55 58 60 62 65 84 85 92 96 130
LT                   : 111
LTE                  : 112
MAIN_K               : 34
MEAN_K               : 58
MEDIAN_K             : 60
MINUS                : 120
MODE_K               : 62
NEQUAL               : 114
OR                   : 104
PLUS                 : 119
PROGRAM_K            : 1
RBRACE               : 6 78
READ_K               : 65
RETURN_K             : 84
RPAREN               : 21 22 31 34 50 55 58 60 62 65 84 85 92 96 130
SEMICOLON            : 1 5 6 39 41 42 46 47 84 96
STRING               : 17
STRING_K             : 14
TIMES                : 125
TO_K                 : 
VARS_K               : 3
VOID_K               : 22
WHILE_K              : 92 96
WRITE_K              : 50
error                : 

Nonterminals, with rules where they appear

ARRAY                : 70 74
ASSIGN               : 39
BODY                 : 21 22 34 38
CONSTANT             : 6 52 129
DO_WHILE             : 45
ELSE                 : 88
EMPTY                : 2 7 8 9 11 20 23 24 25 27 29 30 32 33 35 37 49 54 56 57 59 61 63 64 67 69 79 80 81 82 83 86 87 89 91 93 94 95 97 98 101 102 106 107 115 116 118 121 122 124 127 131 132
EXPRESSION           : 72 78 84 108 119 120
EXPRESSION_LIST      : 31 100
FACTOR               : 123
FUNCTION_CALL        : 46 73
GRAPH                : 47
H_EXPRESSION         : 85 92 96 99 104 105 130
H_REXPRESSION        : 103
ID_LIST              : 65 68
IFELSE               : 43
MEAN                 : 75
MEDIAN               : 76
MODE                 : 77
MODULES              : 1 21 22
MODULES_RETURN       : 18
MODULES_VOID         : 19
NELSE                : 85
PARAMETERS           : 21 22 28
PROGRAM              : 0
RBODY                : 36
READ                 : 41
RETURN               : 40
REXPRESSION          : 117
REXPRESSION_LIST     : 99
RID_LIST             : 66
RPARAMETERS          : 26
RSTATEMENT           : 48 85 90 92 96
RTERM                : 123
RVARS_DECL           : 5 6
RWRITE               : 51 52
R_ASSIGN             : 51 70 71
START                : 1
STATEMENT            : 36 48
S_EXPRESSION         : 103 109 110 111 112 113 114
S_REXPRESSION        : 108
TERM                 : 117 125 126
TYPE                 : 5 6 21 26
VAR                  : 5 6 26 55 55 58 60 62 71 78
VARS                 : 1 21 22
VARS_DECL            : 3 10
WHILE_STMT           : 44
WRITE                : 42
WRITE_LIST           : 50 53
neural_array_dec     : 6
neural_array_pop     : 78
neural_array_size    : 6
neural_array_ver     : 78
neural_assign        : 71 78
neural_assign_quad   : 70 71
neural_check_array   : 55 55 58 60 62
neural_constant      : 6 52 129
neural_do_while      : 96
neural_do_while_end  : 96
neural_else          : 90
neural_endfunc       : 21 22
neural_equals        : 70 71
neural_expression    : 117
neural_factor_id     : 128
neural_fc_era        : 31
neural_fc_gosub      : 31
neural_graph_quad    : 55
neural_hexpression   : 104
neural_ifelse        : 85
neural_ifelse_end    : 85
neural_main          : 34
neural_mean_quad     : 58
neural_median_quad   : 60
neural_mode_quad     : 62
neural_modules       : 21 22
neural_modules_size  : 21 22
neural_op            : 104 105 109 110 111 112 113 114 119 120 125 126
neural_param_exp     : 99
neural_parameters    : 26
neural_program_id    : 1
neural_read          : 66
neural_sexpression   : 109 110 111 112 113 114
neural_term          : 123
neural_var_dec       : 5
neural_while         : 92
neural_while_end     : 92
neural_while_push    : 92
neural_write         : 53 54

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . PROGRAM_K ID neural_program_id SEMICOLON VARS MODULES START

    PROGRAM_K       shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> PROGRAM_K . ID neural_program_id SEMICOLON VARS MODULES START

    ID              shift and go to state 3


state 3

    (1) PROGRAM -> PROGRAM_K ID . neural_program_id SEMICOLON VARS MODULES START
    (2) neural_program_id -> . EMPTY
    (133) EMPTY -> .

    SEMICOLON       reduce using rule 133 (EMPTY -> .)

    neural_program_id              shift and go to state 4
    EMPTY                          shift and go to state 5

state 4

    (1) PROGRAM -> PROGRAM_K ID neural_program_id . SEMICOLON VARS MODULES START

    SEMICOLON       shift and go to state 6


state 5

    (2) neural_program_id -> EMPTY .

    SEMICOLON       reduce using rule 2 (neural_program_id -> EMPTY .)


state 6

    (1) PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON . VARS MODULES START
    (3) VARS -> . VARS_K BLOCKSTART VARS_DECL BLOCKEND

    VARS_K          shift and go to state 8

    VARS                           shift and go to state 7

state 7

    (1) PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON VARS . MODULES START
    (18) MODULES -> . MODULES_RETURN
    (19) MODULES -> . MODULES_VOID
    (20) MODULES -> . EMPTY
    (21) MODULES_RETURN -> . FUNCTION_K TYPE ID neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
    (22) MODULES_VOID -> . FUNCTION_K VOID_K ID neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
    (133) EMPTY -> .

    FUNCTION_K      shift and go to state 13
    MAIN_K          reduce using rule 133 (EMPTY -> .)

    MODULES                        shift and go to state 9
    MODULES_RETURN                 shift and go to state 10
    MODULES_VOID                   shift and go to state 11
    EMPTY                          shift and go to state 12

state 8

    (3) VARS -> VARS_K . BLOCKSTART VARS_DECL BLOCKEND

    BLOCKSTART      shift and go to state 14


state 9

    (1) PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON VARS MODULES . START
    (34) START -> . MAIN_K neural_main LPAREN RPAREN BLOCKSTART BODY BLOCKEND

    MAIN_K          shift and go to state 16

    START                          shift and go to state 15

state 10

    (18) MODULES -> MODULES_RETURN .

    MAIN_K          reduce using rule 18 (MODULES -> MODULES_RETURN .)


state 11

    (19) MODULES -> MODULES_VOID .

    MAIN_K          reduce using rule 19 (MODULES -> MODULES_VOID .)


state 12

    (20) MODULES -> EMPTY .

    MAIN_K          reduce using rule 20 (MODULES -> EMPTY .)


state 13

    (21) MODULES_RETURN -> FUNCTION_K . TYPE ID neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
    (22) MODULES_VOID -> FUNCTION_K . VOID_K ID neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
    (12) TYPE -> . INT_K
    (13) TYPE -> . FLOAT_K
    (14) TYPE -> . STRING_K

    VOID_K          shift and go to state 18
    INT_K           shift and go to state 19
    FLOAT_K         shift and go to state 20
    STRING_K        shift and go to state 21

    TYPE                           shift and go to state 17

state 14

    (3) VARS -> VARS_K BLOCKSTART . VARS_DECL BLOCKEND
    (5) VARS_DECL -> . TYPE VAR neural_var_dec SEMICOLON RVARS_DECL
    (6) VARS_DECL -> . ARRAY_K TYPE VAR neural_array_dec LBRACE CONSTANT neural_constant neural_array_size RBRACE SEMICOLON RVARS_DECL
    (12) TYPE -> . INT_K
    (13) TYPE -> . FLOAT_K
    (14) TYPE -> . STRING_K

    ARRAY_K         shift and go to state 24
    INT_K           shift and go to state 19
    FLOAT_K         shift and go to state 20
    STRING_K        shift and go to state 21

    VARS_DECL                      shift and go to state 22
    TYPE                           shift and go to state 23

state 15

    (1) PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON VARS MODULES START .

    $end            reduce using rule 1 (PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON VARS MODULES START .)


state 16

    (34) START -> MAIN_K . neural_main LPAREN RPAREN BLOCKSTART BODY BLOCKEND
    (35) neural_main -> . EMPTY
    (133) EMPTY -> .

    LPAREN          reduce using rule 133 (EMPTY -> .)

    neural_main                    shift and go to state 25
    EMPTY                          shift and go to state 26

state 17

    (21) MODULES_RETURN -> FUNCTION_K TYPE . ID neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES

    ID              shift and go to state 27


state 18

    (22) MODULES_VOID -> FUNCTION_K VOID_K . ID neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES

    ID              shift and go to state 28


state 19

    (12) TYPE -> INT_K .

    ID              reduce using rule 12 (TYPE -> INT_K .)


state 20

    (13) TYPE -> FLOAT_K .

    ID              reduce using rule 13 (TYPE -> FLOAT_K .)


state 21

    (14) TYPE -> STRING_K .

    ID              reduce using rule 14 (TYPE -> STRING_K .)


state 22

    (3) VARS -> VARS_K BLOCKSTART VARS_DECL . BLOCKEND

    BLOCKEND        shift and go to state 29


state 23

    (5) VARS_DECL -> TYPE . VAR neural_var_dec SEMICOLON RVARS_DECL
    (4) VAR -> . ID

    ID              shift and go to state 31

    VAR                            shift and go to state 30

state 24

    (6) VARS_DECL -> ARRAY_K . TYPE VAR neural_array_dec LBRACE CONSTANT neural_constant neural_array_size RBRACE SEMICOLON RVARS_DECL
    (12) TYPE -> . INT_K
    (13) TYPE -> . FLOAT_K
    (14) TYPE -> . STRING_K

    INT_K           shift and go to state 19
    FLOAT_K         shift and go to state 20
    STRING_K        shift and go to state 21

    TYPE                           shift and go to state 32

state 25

    (34) START -> MAIN_K neural_main . LPAREN RPAREN BLOCKSTART BODY BLOCKEND

    LPAREN          shift and go to state 33


state 26

    (35) neural_main -> EMPTY .

    LPAREN          reduce using rule 35 (neural_main -> EMPTY .)


state 27

    (21) MODULES_RETURN -> FUNCTION_K TYPE ID . neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
    (23) neural_modules -> . EMPTY
    (133) EMPTY -> .

    LPAREN          reduce using rule 133 (EMPTY -> .)

    neural_modules                 shift and go to state 34
    EMPTY                          shift and go to state 35

state 28

    (22) MODULES_VOID -> FUNCTION_K VOID_K ID . neural_modules LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
    (23) neural_modules -> . EMPTY
    (133) EMPTY -> .

    LPAREN          reduce using rule 133 (EMPTY -> .)

    neural_modules                 shift and go to state 36
    EMPTY                          shift and go to state 35

state 29

    (3) VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .

    FUNCTION_K      reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    MAIN_K          reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    RETURN_K        reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    READ_K          reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    WRITE_K         reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    IF_K            reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    WHILE_K         reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    DO_K            reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    ID              reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    GRAPH_K         reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)
    BLOCKEND        reduce using rule 3 (VARS -> VARS_K BLOCKSTART VARS_DECL BLOCKEND .)


state 30

    (5) VARS_DECL -> TYPE VAR . neural_var_dec SEMICOLON RVARS_DECL
    (7) neural_var_dec -> . EMPTY
    (133) EMPTY -> .

    SEMICOLON       reduce using rule 133 (EMPTY -> .)

    neural_var_dec                 shift and go to state 37
    EMPTY                          shift and go to state 38

state 31

    (4) VAR -> ID .

    SEMICOLON       reduce using rule 4 (VAR -> ID .)
    LBRACE          reduce using rule 4 (VAR -> ID .)
    COMMA           reduce using rule 4 (VAR -> ID .)
    RPAREN          reduce using rule 4 (VAR -> ID .)


state 32

    (6) VARS_DECL -> ARRAY_K TYPE . VAR neural_array_dec LBRACE CONSTANT neural_constant neural_array_size RBRACE SEMICOLON RVARS_DECL
    (4) VAR -> . ID

    ID              shift and go to state 31

    VAR                            shift and go to state 39

state 33

    (34) START -> MAIN_K neural_main LPAREN . RPAREN BLOCKSTART BODY BLOCKEND

    RPAREN          shift and go to state 40


state 34

    (21) MODULES_RETURN -> FUNCTION_K TYPE ID neural_modules . LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES

    LPAREN          shift and go to state 41


state 35

    (23) neural_modules -> EMPTY .

    LPAREN          reduce using rule 23 (neural_modules -> EMPTY .)


state 36

    (22) MODULES_VOID -> FUNCTION_K VOID_K ID neural_modules . LPAREN PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES

    LPAREN          shift and go to state 42


state 37

    (5) VARS_DECL -> TYPE VAR neural_var_dec . SEMICOLON RVARS_DECL

    SEMICOLON       shift and go to state 43


state 38

    (7) neural_var_dec -> EMPTY .

    SEMICOLON       reduce using rule 7 (neural_var_dec -> EMPTY .)


state 39

    (6) VARS_DECL -> ARRAY_K TYPE VAR . neural_array_dec LBRACE CONSTANT neural_constant neural_array_size RBRACE SEMICOLON RVARS_DECL
    (8) neural_array_dec -> . EMPTY
    (133) EMPTY -> .

    LBRACE          reduce using rule 133 (EMPTY -> .)

    neural_array_dec               shift and go to state 44
    EMPTY                          shift and go to state 45

state 40

    (34) START -> MAIN_K neural_main LPAREN RPAREN . BLOCKSTART BODY BLOCKEND

    BLOCKSTART      shift and go to state 46


state 41

    (21) MODULES_RETURN -> FUNCTION_K TYPE ID neural_modules LPAREN . PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
    (26) PARAMETERS -> . TYPE VAR neural_parameters RPARAMETERS
    (27) PARAMETERS -> . EMPTY
    (12) TYPE -> . INT_K
    (13) TYPE -> . FLOAT_K
    (14) TYPE -> . STRING_K
    (133) EMPTY -> .

    INT_K           shift and go to state 19
    FLOAT_K         shift and go to state 20
    STRING_K        shift and go to state 21
    RPAREN          reduce using rule 133 (EMPTY -> .)

    TYPE                           shift and go to state 47
    PARAMETERS                     shift and go to state 48
    EMPTY                          shift and go to state 49

state 42

    (22) MODULES_VOID -> FUNCTION_K VOID_K ID neural_modules LPAREN . PARAMETERS RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES
    (26) PARAMETERS -> . TYPE VAR neural_parameters RPARAMETERS
    (27) PARAMETERS -> . EMPTY
    (12) TYPE -> . INT_K
    (13) TYPE -> . FLOAT_K
    (14) TYPE -> . STRING_K
    (133) EMPTY -> .

    INT_K           shift and go to state 19
    FLOAT_K         shift and go to state 20
    STRING_K        shift and go to state 21
    RPAREN          reduce using rule 133 (EMPTY -> .)

    PARAMETERS                     shift and go to state 50
    TYPE                           shift and go to state 47
    EMPTY                          shift and go to state 49

state 43

    (5) VARS_DECL -> TYPE VAR neural_var_dec SEMICOLON . RVARS_DECL
    (10) RVARS_DECL -> . VARS_DECL
    (11) RVARS_DECL -> . EMPTY
    (5) VARS_DECL -> . TYPE VAR neural_var_dec SEMICOLON RVARS_DECL
    (6) VARS_DECL -> . ARRAY_K TYPE VAR neural_array_dec LBRACE CONSTANT neural_constant neural_array_size RBRACE SEMICOLON RVARS_DECL
    (133) EMPTY -> .
    (12) TYPE -> . INT_K
    (13) TYPE -> . FLOAT_K
    (14) TYPE -> . STRING_K

    ARRAY_K         shift and go to state 24
    BLOCKEND        reduce using rule 133 (EMPTY -> .)
    INT_K           shift and go to state 19
    FLOAT_K         shift and go to state 20
    STRING_K        shift and go to state 21

    TYPE                           shift and go to state 23
    RVARS_DECL                     shift and go to state 51
    VARS_DECL                      shift and go to state 52
    EMPTY                          shift and go to state 53

state 44

    (6) VARS_DECL -> ARRAY_K TYPE VAR neural_array_dec . LBRACE CONSTANT neural_constant neural_array_size RBRACE SEMICOLON RVARS_DECL

    LBRACE          shift and go to state 54


state 45

    (8) neural_array_dec -> EMPTY .

    LBRACE          reduce using rule 8 (neural_array_dec -> EMPTY .)


state 46

    (34) START -> MAIN_K neural_main LPAREN RPAREN BLOCKSTART . BODY BLOCKEND
    (36) BODY -> . STATEMENT RBODY
    (37) BODY -> . EMPTY
    (39) STATEMENT -> . ASSIGN SEMICOLON
    (40) STATEMENT -> . RETURN
    (41) STATEMENT -> . READ SEMICOLON
    (42) STATEMENT -> . WRITE SEMICOLON
    (43) STATEMENT -> . IFELSE
    (44) STATEMENT -> . WHILE_STMT
    (45) STATEMENT -> . DO_WHILE
    (46) STATEMENT -> . FUNCTION_CALL SEMICOLON
    (47) STATEMENT -> . GRAPH SEMICOLON
    (133) EMPTY -> .
    (70) ASSIGN -> . ARRAY EQUALS neural_equals R_ASSIGN neural_assign_quad
    (71) ASSIGN -> . VAR neural_assign EQUALS neural_equals R_ASSIGN neural_assign_quad
    (84) RETURN -> . RETURN_K LPAREN EXPRESSION RPAREN SEMICOLON
    (65) READ -> . READ_K LPAREN ID_LIST RPAREN
    (50) WRITE -> . WRITE_K LPAREN WRITE_LIST RPAREN
    (85) IFELSE -> . IF_K LPAREN H_EXPRESSION RPAREN neural_ifelse BLOCKSTART RSTATEMENT BLOCKEND NELSE neural_ifelse_end
    (92) WHILE_STMT -> . WHILE_K neural_while_push LPAREN H_EXPRESSION RPAREN neural_while BLOCKSTART RSTATEMENT BLOCKEND neural_while_end
    (96) DO_WHILE -> . DO_K neural_do_while BLOCKSTART RSTATEMENT BLOCKEND WHILE_K LPAREN H_EXPRESSION RPAREN neural_do_while_end SEMICOLON
    (31) FUNCTION_CALL -> . ID neural_fc_era LPAREN EXPRESSION_LIST neural_fc_gosub RPAREN
    (55) GRAPH -> . GRAPH_K LPAREN VAR neural_check_array COMMA VAR neural_check_array RPAREN neural_graph_quad
    (78) ARRAY -> . VAR neural_assign LBRACE neural_array_pop EXPRESSION neural_array_ver RBRACE
    (4) VAR -> . ID

    BLOCKEND        reduce using rule 133 (EMPTY -> .)
    RETURN_K        shift and go to state 69
    READ_K          shift and go to state 70
    WRITE_K         shift and go to state 71
    IF_K            shift and go to state 72
    WHILE_K         shift and go to state 73
    DO_K            shift and go to state 74
    ID              shift and go to state 75
    GRAPH_K         shift and go to state 76

    BODY                           shift and go to state 55
    STATEMENT                      shift and go to state 56
    EMPTY                          shift and go to state 57
    ASSIGN                         shift and go to state 58
    RETURN                         shift and go to state 59
    READ                           shift and go to state 60
    WRITE                          shift and go to state 61
    IFELSE                         shift and go to state 62
    WHILE_STMT                     shift and go to state 63
    DO_WHILE                       shift and go to state 64
    FUNCTION_CALL                  shift and go to state 65
    GRAPH                          shift and go to state 66
    ARRAY                          shift and go to state 67
    VAR                            shift and go to state 68

state 47

    (26) PARAMETERS -> TYPE . VAR neural_parameters RPARAMETERS
    (4) VAR -> . ID

    ID              shift and go to state 31

    VAR                            shift and go to state 77

state 48

    (21) MODULES_RETURN -> FUNCTION_K TYPE ID neural_modules LPAREN PARAMETERS . RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES

    RPAREN          shift and go to state 78


state 49

    (27) PARAMETERS -> EMPTY .

    RPAREN          reduce using rule 27 (PARAMETERS -> EMPTY .)


state 50

    (22) MODULES_VOID -> FUNCTION_K VOID_K ID neural_modules LPAREN PARAMETERS . RPAREN BLOCKSTART VARS neural_modules_size BODY BLOCKEND neural_endfunc MODULES

    RPAREN          shift and go to state 79


state 51

    (5) VARS_DECL -> TYPE VAR neural_var_dec SEMICOLON RVARS_DECL .

    BLOCKEND        reduce using rule 5 (VARS_DECL -> TYPE VAR neural_var_dec SEMICOLON RVARS_DECL .)


state 52

    (10) RVARS_DECL -> VARS_DECL .

    BLOCKEND        reduce using rule 10 (RVARS_DECL -> VARS_DECL .)


state 53

    (11) RVARS_DECL -> EMPTY .

    BLOCKEND        reduce using rule 11 (RVARS_DECL -> EMPTY .)


state 54

    (6) VARS_DECL -> ARRAY_K TYPE VAR neural_array_dec LBRACE . CONSTANT neural_constant neural_array_size RBRACE SEMICOLON RVARS_DECL
    (15) CONSTANT -> . INT
    (16) CONSTANT -> . FLOAT
    (17) CONSTANT -> . STRING

    INT             shift and go to state 81
    FLOAT           shift and go to state 82
    STRING          shift and go to state 83

    CONSTANT                       shift and go to state 80

state 55

    (34) START -> MAIN_K neural_main LPAREN RPAREN BLOCKSTART BODY . BLOCKEND

    BLOCKEND        shift and go to state 84


state 56

    (36) BODY -> STATEMENT . RBODY
    (38) RBODY -> . BODY
    (36) BODY -> . STATEMENT RBODY
    (37) BODY -> . EMPTY
    (39) STATEMENT -> . ASSIGN SEMICOLON
    (40) STATEMENT -> . RETURN
    (41) STATEMENT -> . READ SEMICOLON
    (42) STATEMENT -> . WRITE SEMICOLON
    (43) STATEMENT -> . IFELSE
